--- a/uiux_index.html
+++ b/uiux_index.html
@@ -103,6 +103,9 @@
             $(".ae_works_btn").click(function() {
                 $(".ae_works_pup,.pup_bg").fadeIn(500);
             });
+            $(".taian_works_btn").click(function() {
+                $(".taian_works_pup,.pup_bg").fadeIn(500);
+            });
             $(".pup_close_btn").click(function() {
                 $(".pup_window,.pup_bg,.pup_window_small,.pup_bg_transparent").hide();
             });
@@ -1032,7 +1035,7 @@
                     </div>
 
                     <div id="p7_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">專案執行範圍</div>
+                        <div class="work_info_title h3 font_bold">專案負責範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品規劃
@@ -1129,6 +1132,17 @@
                                 <span><a href="sino_works_8.html">維運提案-競品分析</a></span>
                             </div>
                         </div>
+                        <div class="work_info_subpart">
+                            <div class="work_info_subtitle h4 font_bold">
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>管理後台製作<span></span>
+                            </div>
+                            <div class="work_info_subtext">
+                                專案過程中，另有參與保單業務的管理後台規劃和介面設計。
+                            </div>
+                            <div class="work_info_note" style="padding-left:33px;">
+                                <div><span>*</span>涉及商業相關業務邏輯資料，故不展示於作品集。</div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -1181,7 +1195,7 @@
                     </div>
 
                     <div class="work_info_part" style="margin-bottom:0px;">
-                        <div id="p8-2_title" class="work_info_title h3 font_bold">個人負責工作</div>
+                        <div id="p8-2_title" class="work_info_title h3 font_bold">專案負責範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面視覺提案
@@ -1283,7 +1297,7 @@
                                     </div>
                                 </div>
                                 <div class="work_info_part" style="margin-bottom:0px;">
-                                    <div class="work_info_title h3 font_bold">個人負責工作</div>
+                                    <div class="work_info_title h3 font_bold">專案負責範圍</div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
                                             <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
@@ -1328,7 +1342,7 @@
                             </div>
                         </div>
                         <div class="work_info_part display_none_1200_2 display_block_960_2" style="margin-bottom:0px;">
-                            <div class="work_info_title h3 font_bold">個人負責工作</div>
+                            <div class="work_info_title h3 font_bold">專案負責範圍</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
@@ -1438,7 +1452,7 @@
                                     </div>
                                 </div>
                                 <div class="work_info_part" style="margin-bottom:0px;">
-                                    <div class="work_info_title h3 font_bold">個人負責工作</div>
+                                    <div class="work_info_title h3 font_bold">專案負責範圍</div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
                                             <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
@@ -1475,7 +1489,7 @@
                         </div>
 
                         <div class="work_info_part display_none_1200_2 display_block_960_2" style="margin-bottom:0px;">
-                            <div class="work_info_title h3 font_bold">個人負責工作</div>
+                            <div class="work_info_title h3 font_bold">專案負責範圍</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
@@ -1562,7 +1576,7 @@
                     </div>
 
                     <div id="p11_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">個人負責工作</div>
+                        <div class="work_info_title h3 font_bold">專案負責範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面設計稿<span>Mockups</span>
@@ -1593,6 +1607,19 @@
                             </div>
                             <div class="work_info_subtext">
                                 有SEO觀念和行銷人員討論行銷接觸點、關鍵字定義，並設置GA和GTM追蹤事件。
+                            </div>
+                        </div>
+                        <div class="work_info_title h3 font_bold">官網維運</div>
+                        <div class="work_info_subpart">
+                            <div class="work_info_subtitle h4 font_bold">
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>工作描述
+                            </div>
+                            <div class="work_info_subtext">
+                                維運泰安產物投保網站(3年)，主要負責定義視覺風格、優化投保流程和介面設計，<br />並參與製作B2B企業投保管理後台。
+                            </div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                <span class="taian_works_btn">部分內容展示</span>
                             </div>
                         </div>
                     </div>
@@ -2167,6 +2194,103 @@
     </div>
     <!-- ... 預計上線說明 end ... -->
 
+    <!-- ... 泰安 維運  ... -->
+    <script type="text/javascript">
+        $(function() {
+            var showTab = 0;
+            var defaultLi = $('.taian_works_pup .pup_tab_btn').eq(showTab).addClass('active');
+            $(defaultLi.find('a').attr('href')).siblings().hide();
+            $('.taian_works_pup .pup_tab_btn').click(function() {
+                var $this = $(this),
+                    clickTab = $this.find('a').attr('href');
+                $this.addClass('active').siblings('.active').removeClass('active');
+                $(clickTab).stop(false, true).fadeIn().siblings().hide();
+                return false;
+            }).find('a').focus(function() {
+                this.blur();
+            });
+        });
+
+    </script>
+    <div class="pup_window taian_works_pup" style="display:none;">
+        <div class="pup_close_btn set_middle pup_close_icon" role="button">
+
+        </div>
+        <div class="pup_window_content" style="overflow:inherit;">
+
+            <div class="pup_window_content_title h4 font_bold">泰安產物官網&nbsp;維運部分展示</div>
+
+            <div class="pup_window_content_tab_container">
+                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#taian_tab_1" class="set_middle"><span>視覺設計</span></a></div>
+                <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#taian_tab_2" class="set_middle"><span>介面流程</span></a></div>
+            </div>
+            <div class="pup_window_tab_content_container" style="height:calc(100% - 146px);">
+
+                <div id="taian_tab_1" class="pup_window_tab_content">
+                    <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
+                        <div class="pup_content">
+                            <div class="pup_text large_text" style="margin-top:30px;text-align:center;">旅平險商品頁</div>
+                            <div class="pup_content_pic_container" style="margin-top:10px;">
+                                <div class="pup_content_pic_item">
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-2.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pup_text large_text" style="margin-top:30px;text-align:center;">投保說明頁</div>
+                            <div class="pup_content_pic_container" style="margin-top:10px;">
+                                <div class="pup_content_pic_item">
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-1.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pup_window_content_end_tip_container">
+                        <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">視覺設計</span></span>
+                    </div>
+                </div>
+                <div id="taian_tab_2" class="pup_window_tab_content">
+                    <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
+                        <div class="pup_content">
+                            <div class="pup_text large_text" style="margin-top:30px;text-align:center;">汽車險線上投保</div>
+                            <div class="pup_content_pic_container" style="margin-top:10px;">
+                                <div class="pup_content_pic_item">
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-3.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-4.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-5.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-6.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pup_text large_text" style="margin-top:30px;text-align:center;">B2B企業投保管理後台</div>
+                            <div class="pup_content_pic_container" style="margin-top:10px;">
+                                <div class="pup_content_pic_item">
+                                    <div class="pup_content_pic_item_content">
+                                        <img src="images_taian/taian_1-7.png" style="width:100%;max-width:1280px;">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pup_text large_text" style="margin-top:20px;text-align:center;font-size:16px;">涉及商業相關業務邏輯資料，僅單頁展示於作品集。</div>
+                        </div>
+
+                    </div>
+                    <div class="pup_window_content_end_tip_container">
+                        <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">介面流程</span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ... 泰安 維運 end ... -->
 </body>
 
 
