--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -108,7 +108,7 @@
                                     <li>年齡25至40歲。</li>
                                     <li>有網站消費的經驗。</li>
                                     <li>具保險認知與觀念。</li>
-                                    <li>願意幫家人購買保險。</li>
+                                    <li>具有家庭觀念。</li>
                                 </ul>
                             </div>
                         </div>
