--- a/sino_works_8.html
+++ b/sino_works_8.html
@@ -96,7 +96,7 @@
                                 <div class="part_title h5 font_bold emphasize_text">前言</div>
                                 <div class="pup_text large_text">
                                     當產品核心功能完成開發(投保流程)上線營運後，接續對市場觀察導入人流、深入了解客群、加強產品競爭力，形成正向營利循環。<br />
-                                    因此在網站上線初期，觀察分析「已有網站營運」的產業前輩，是必不可少的環節之一。
+                                    因此在<span class="emphasize_text">網站上線初期，觀察分析「已有網站營運的產業前輩」</span>，是必不可少的環節之一。
                                 </div>
                             </div>
                         </div>
