--- a/sino_works_8.html
+++ b/sino_works_8.html
@@ -198,7 +198,7 @@
                                     <img src="images_sino_8/sino8_1-10.jpg" style="width:100%;max-width:900px;display:block;">
                                 </picture>
                             </div>
-                            <div class="pup_text large_text" style="margin:15px 0px;">如此維運<span class="emphasize_text">強化網站服務資源和取得集團品牌價值。</span></div>
+                            <div class="pup_text large_text" style="margin-top:40px;margin-bottom:5px;">網站可效仿如此<span class="emphasize_text">強化服務資源和集團價值。</span></div>
                             <div>
                                 <picture>
                                     <img src="images_sino_8/sino8_1-11.png" style="width:100%;max-width:900px;display:block;">
