--- a/yulon_works_4.html
+++ b/yulon_works_4.html
@@ -96,6 +96,13 @@
                         </div>
                     </div>
                     <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                        A1首頁
+                    </div>
+                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">A1_1.1首頁&nbsp;理想狀態</span>
+                        <img src="images/yulon_pic_9-0-1.png" style="max-width:100%">
+                    </div>
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
                         B1員工福利項目
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
