--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -90,9 +90,43 @@
         <div class="pup_window_tab_content_container">
 
             <div id="yulon_tab_9" class="pup_window_tab_content">
+                <div class="pup_window_content_part" style="margin-top:20px;padding-left:0px;">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據業務需要，規劃後台資訊介面</div>
+                        <div class="pup_content_pic_container" style="margin-top:10px;">
+                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
+                                <div class="pup_text" style="margin-top:5px;padding-left:20px;">
+                                    <ul class="text_item_list pup_normal_text_small emphasize_text" style="list-style:disc">
+                                        <li>具時效性處理之業務提示。</li>
+                                        <li>有關業務目標的數據追蹤。</li>
+                                        <li>追蹤後台操作紀錄。</li>
+                                    </ul>
+                                </div>
+                                <div style="margin-top:20px;">
+                                    <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
+                                        <div class="pup_content_pic_item_content yuanta_pic_1">
+                                            <span>A1_1.1首頁(後台)</span>
+                                            <img src="images/yulon_pic_9-0-1.png" style="max-width:100%">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">管理員點擊「留言圖示按鈕」，開啟彈跳視窗進行回覆。</span></div>
+                                <div style="margin-top:0px;">
+                                    <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
+                                        <div class="pup_content_pic_item_content yuanta_pic_1">
+                                            <span>B1_7.1留言管理(後台)-彈跳視窗</span>
+                                            <img src="images/yulon_pic_10-24.png" style="max-width:100%">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️滿足管理員頻率高、需即時性操作的使用情境</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="pup_window_content_part" style="padding-left:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據後台操作情境，設計使用功能</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、根據後台操作情境，設計使用功能</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.頻率高、需即時性的操作</span></div>
@@ -168,7 +202,7 @@
                 </div>
                 <div class="pup_window_content_part" style="padding-left:0px;margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、針對業務需求，設計功能機制</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 三、針對業務需求，設計功能機制</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
@@ -358,7 +392,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text_small" style="margin-top:0px;margin-bottom:20px;"><span class="emphasize_text">一級主頁：標題字級大、資料項目(另根據數量)以牌卡方式羅列，<br/>次級頁面：標題字級較小、資料項目(另根據數量)以列表方式羅列。</span></div>
+                                <div class="pup_normal_text_small" style="margin-top:0px;margin-bottom:20px;"><span class="emphasize_text">一級主頁：標題字級大、資料項目(另根據數量)以牌卡方式羅列，<br />次級頁面：標題字級較小、資料項目(另根據數量)以列表方式羅列。</span></div>
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
