--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -110,16 +110,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">管理員點擊「留言圖示按鈕」，開啟彈跳視窗進行回覆。</span></div>
-                                <div style="margin-top:0px;">
-                                    <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
-                                        <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B1_7.1留言管理(後台)-彈跳視窗</span>
-                                            <img src="images/yulon_pic_10-24.png" style="max-width:100%">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️滿足管理員頻率高、需即時性操作的使用情境</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️管理員能即時掌握重要業務資訊</span></div>
                             </div>
                         </div>
                     </div>
