--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -126,11 +126,11 @@
                                 </div>
                                 <div class="text_item" style="margin-top:20px;">
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin:0px 0px;">
-                                        <li><span class="emphasize_text">產生投資動機</span>&nbsp;→&nbsp;投資VIP室</li>
-                                        <li><span class="emphasize_text">查找標的資訊</span>&nbsp;→&nbsp;情報站</li>
-                                        <li><span class="emphasize_text">交易投資商品</span>&nbsp;→&nbsp;交易所</li>
-                                        <li><span class="emphasize_text">追蹤標的資訊</span>&nbsp;→&nbsp;服務台</li>
-                                        <li><span class="emphasize_text">審視績效、決策買賣</span>&nbsp;→&nbsp;帳務中心</li>
+                                        <li><span>產生投資動機</span>&nbsp;→&nbsp;投資VIP室</li>
+                                        <li><span>查找標的資訊</span>&nbsp;→&nbsp;情報站</li>
+                                        <li><span>交易投資商品</span>&nbsp;→&nbsp;交易所</li>
+                                        <li><span>追蹤標的資訊</span>&nbsp;→&nbsp;服務台</li>
+                                        <li><span>審視績效、決策買賣</span>&nbsp;→&nbsp;帳務中心</li>
                                     </ul>
                                 </div>
                                 <div class="text_item_title h6" style="margin-top:20px;">入口：導覽列<br /><span class="pup_normal_text_small">(ios Tab bars、android Bottom navigation)</span></div>
@@ -138,8 +138,8 @@
                                     <img src="images/gapp_pic_8-1.png" style="max-width:100%">
                                 </div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-top:40px;">
-                                    <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">以首頁(投資VIP室)為例</div>
-                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">引導使用者產生投資動機</div>
+                                    <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">如：投資VIP室(首頁)</div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">引導使用者產生投資動機。</div>
                                     <div>
                                         <div class="pup_content_pic">
                                             <picture>
@@ -147,7 +147,41 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">以此增加使用者交易頻率，提升產品營收效益。</div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">增加使用者交易頻率，提升產品營收效益。</div>
+                                </div>
+                                <div class="pup_content_pic_item" style="text-align:left;margin-top:40px;">
+                                    <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">如：服務台</div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">推播商品資訊功能，減少追蹤標的時間。</div>
+                                    <div>
+                                        <div class="pup_content_pic">
+                                            <picture>
+                                                <img src="images/gapp_pic_6-12-1.png" style="max-width:100%;">
+                                            </picture>
+                                        </div>
+                                        <div class="pup_content_pic">
+                                            <picture>
+                                                <img src="images/gapp_pic_6-13-8.png" style="max-width:100%;">
+                                            </picture>
+                                        </div>
+                                    </div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">將時間、心力用來投資決策。</div>
+                                </div>
+                                <div class="pup_content_pic_item" style="text-align:left;margin-top:40px;">
+                                    <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">如：帳務中心</div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">統整投資績效數據。</div>
+                                    <div>
+                                        <div class="pup_content_pic">
+                                            <picture>
+                                                <img src="images/gapp_pic_6-11-1.png" style="max-width:100%;">
+                                            </picture>
+                                        </div>
+                                        <div class="pup_content_pic">
+                                            <picture>
+                                                <img src="images/gapp_pic_6-11-2.png" style="max-width:100%;">
+                                            </picture>
+                                        </div>
+                                    </div>
+                                    <div class="pup_normal_text emphasize_text" style="margin:10px 0px 5px 0px;">減少審視時間、增加決策效率。</div>
                                 </div>
                             </div>
                         </div>
