--- a/yulon_works_4.html
+++ b/yulon_works_4.html
@@ -140,7 +140,7 @@
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_1.3新增福利項目&nbsp;錯誤狀態</span>
                         <img src="images/yulon_pic_9-9.png" style="max-width:100%">
                     </div>
-                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                    <div class="pup_content_pic" style="margin-bottom:30px;display:none;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_1.4新增福利項目&nbsp;局部狀態&nbsp;輸入框當前輸入(focus)</span>
                         <img src="images/yulon_pic_9-8.png" style="max-width:100%">
                     </div>
