--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -372,7 +372,7 @@
                                 </div>
                                 <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️避免「非當下使用情境」的介面提示，減輕使用者閱讀操作的認知成本。</span></div>
                             </div>
-                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
+                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;display:none;">
                                 <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">四、依產品架構層級，有層次的設計介面版型</div>
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">如：以頁面標題、資料項目的排版形式</span>區分一級主頁和次級主頁。</div>
                                 <div style="margin-top:20px;">
