--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -182,7 +182,7 @@
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
                                             <span>B3_12.1福利項目內容(後台)-申請紀錄</span>
-                                            <img src="images/yulon_pic_9-26.png" style="max-width:100%">
+                                            <img src="images/yulon_pic_9-26-2.png" style="max-width:100%">
                                         </div>
                                     </div>
                                 </div>
