--- a/uiux_index.html
+++ b/uiux_index.html
@@ -349,7 +349,7 @@
                                 <div class="list_line"></div><a id="p3_list" href="#p3" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">3</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">專案合作成員對我的看法</div>
+                                <div class="list_note_tag" style="color:#232323;">專案成員對我的看法</div>
                             </div>
                             <li>
                                 <div class="list_page_name">專長技能</div>
@@ -360,7 +360,7 @@
                                 <div class="list_line"></div><a id="p5_list" href="#p5" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">5</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品規劃思維-案例分享</div>
+                                <div class="list_note_tag" style="color:#232323;">產品規劃-案例分享</div>
                             </div>
                         </ul>
                     </div>
@@ -372,35 +372,35 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品需求規劃&nbsp;→&nbsp;介面設計、網頁原型產出&nbsp;→&nbsp;測試、維運提案</div>
+                                <div class="list_note_tag" style="color:#232323;">產品規劃&nbsp;→&nbsp;介面設計、網站原型&nbsp;→&nbsp;測試、維運提案</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨&nbsp;槓桿交易商官網</div>
                                 <div class="list_line"></div><a id="p8_list" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">官網視覺風格、介面設計</div>
+                                <div class="list_note_tag">官網視覺、介面設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">裕隆集團&nbsp;<br>2B員工APP&amp;管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品規劃思維(強化開發價值)&nbsp;→&nbsp;2B前、後台介面設計</div>
+                                <div class="list_note_tag" style="color:#232323;">2B產品規劃(強化開發價值)&nbsp;→&nbsp;前、後台介面設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
                                 <div class="list_line"></div><a id="p10_list" href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品提案思維(強化營利循環)&nbsp;→&nbsp;2C產品介面設計</div>
+                                <div class="list_note_tag" style="color:#232323;">2C產品提案(強化營利循環)&nbsp;→&nbsp;介面設計</div>
                             </div>
                             <li>
-                                <div class="list_page_name">泰安產物&nbsp;活動網頁</div>
+                                <div class="list_page_name">泰安產物&nbsp;行銷活動網頁</div>
                                 <div class="list_line"></div><a id="p11_list" href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">行銷視覺設計&nbsp;→&nbsp;網頁原型產出</div>
+                                <div class="list_note_tag">視覺設計&nbsp;→&nbsp;網頁原型</div>
                             </div>
                         </ul>
                     </div>
