--- a/uiux_index.html
+++ b/uiux_index.html
@@ -382,7 +382,7 @@
                                 <div class="list_note_tag">官網視覺、介面設計</div>
                             </div>
                             <li>
-                                <div class="list_page_name">裕隆集團&nbsp;<br>2B員工APP&amp;管理後台</div>
+                                <div class="list_page_name">裕隆集團&nbsp;<br>員工APP&amp;管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
