--- a/study_1.html
+++ b/study_1.html
@@ -179,11 +179,11 @@
                     </div>
                     <div class="pup_text" style="margin-top:5px;padding-left:40px;">
                         <ul class="text_item_list pup_normal_text_small" style="list-style:disc">
-                            <li>可收集學生註冊資料，<span class="emphasize_text">擴充業務人員的客戶名單。</span></li>
-                            <li><span class="emphasize_text">紀錄學生使用網站的操作資訊</span>，給予業務人員參考幫助銷售。<br /><span class="emphasize_text">如：A學生大多觀看英文解題影音，可電訪A學生的家長推銷實體英文教材。</span></li>
-                            <li>以活動網站為參考物，<span class="emphasize_text">了解家長對教學網站的接受度和看法</span>，作為後續網站產品開發的決策依據。</li>
-                            <li>蒐集流量數據，<span class="emphasize_text">評估網站產品的硬體和技術成本。</span></li>
-                            <li>驗證網站產品能<span class="emphasize_text">成為實體產品銷售的助力</span>，減少業務人員的反彈。</li>
+                            <li>收集學生註冊資料，<span class="emphasize_text">擴充業務人員客戶名單。</span></li>
+                            <li><span class="emphasize_text">紀錄學生操作資訊</span>，給予業務人員銷售參考。<br /><span class="emphasize_text">如：A學生大多觀看英文解題，可電訪A家長推銷英文教材。</span></li>
+                            <li>以活動網站為例，<span class="emphasize_text">了解家長的接受度和看法</span>，作為後續開發依據。</li>
+                            <li>蒐集流量數據，<span class="emphasize_text">評估網站硬體和技術成本。</span></li>
+                            <li>驗證網站能為<span class="emphasize_text">實體產品的助力</span>，減少業務人員反彈。</li>
                         </ul>
                     </div>
                 </div>
@@ -192,14 +192,14 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">四、產品思維展現</div>
                     <div class="pup_text large_text bold_text" style="margin-top:15px;">
-                        1.評估分析優、劣勢，<span class="emphasize_text">以發展優勢、減少劣勢為出發點</span>，發想產品模式。
+                        1.評估優、劣勢，<span class="emphasize_text">以發展優勢、減少劣勢為出發點</span>，發想產品模式。
                     </div>
 
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        2.<span class="emphasize_text">以低成本有效率的「最小可行」方案</span>，收集有利產品開發之價值資料。
+                        2.<span class="emphasize_text">以低成本有效率「最小可行」方案</span>，收集有利產品開發之資料。
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        3.<span class="emphasize_text">思考客群需求情境，推想接觸熱點</span>，成功導入流量並獲取產品銷售之關鍵資料。
+                        3.<span class="emphasize_text">思考客群需求情境，推想接觸熱點</span>，成功導入流量並獲取銷售關鍵資料。
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
                         4.能思考<span class="emphasize_text">產品價值是否高於開發成本。</span>
@@ -210,20 +210,20 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">五、成果</div>
                     <div class="pup_text large_text bold_text" style="margin-top:15px;">
-                        1.深受業務人員肯定，<span class="emphasize_text">當月實體產品成交率顯著提升</span>(與上月份相比成長近20%)。
+                        1.受業務人員肯定，<span class="emphasize_text">當月實體產品成交率顯著提升</span>(與上月份相比成長近20%)。
                     </div>
 
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
                         2.獲公司決策者認同，<span class="emphasize_text">導入現有商業模式循環運作。</span>
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        3.<span class="emphasize_text">活動網站模組化</span>，後續人工成本僅替換視覺圖片即可。
+                        3.<span class="emphasize_text">活動網站模組化</span>，後續人工成本僅替換視覺圖片。
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        4.收集客群對網站產品的看法，<span class="emphasize_text">使商業策略的後續方向更加清晰。</span>
+                        4.收集客群對網站產品的看法，<span class="emphasize_text">使後續方向更加清晰。</span>
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        5.通過利害關係人(業務人員、編輯部、決策高層)了解公司業務邏輯，<span class="emphasize_text">使個人有效融入營運團隊。</span>
+                        5.通過利害關係人(業務人員、編輯部、決策高層)了解公司業務邏輯，<span class="emphasize_text">使工作有效融入營運團隊。</span>
                     </div>
                 </div>
             </div>
