--- a/study_1.html
+++ b/study_1.html
@@ -74,7 +74,7 @@
 <body class="body_page ps_works_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">產品發想思維-案例展示</div>
+            <div class="h4 font_bold">產品發想-案例展示</div>
             <a href="uiux_index.html#p5_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -112,17 +112,17 @@
                         任務緣由：
                     </div>
                     <div class="pup_text">
-                        公司決策者<span class="emphasize_text">希望發想一套網站學習產品，將參考書、影音內容放置於網站</span>，<br />讓學生、家長能透過網站學習和付費，使產品營運減少對業務人員的依賴。
+                        公司決策者<span class="emphasize_text">希望發想一套網站學習產品，將參考書、影音內容放置於網站</span>，<br />讓學生、家長透過網站學習和付費，使營運減少對業務人員的依賴。
                     </div>
                     <div class="pup_text large_text bold_text emphasize_text" style="margin-top:15px;">
-                        個人釐清公司現有產品後，分析網站學習產品優劣勢，
+                        個人釐清公司現有產品，分析網站優劣勢，
                     </div>
                     <div class="pup_text" style="margin-top:5px;">
                         <span class="emphasize_text">優勢：</span><br />
                         <span class="pup_normal_text_small">
-                            1.符合學生搜尋資訊的習慣。<br />
-                            2.減少公司營運對業務人員的依賴。<br />
-                            3.有效收集學生的學習資料。
+                            1.符合學生搜尋資訊習慣。<br />
+                            2.減少營運對業務人員的依賴。<br />
+                            3.方便收集學生的學習資料。
                         </span>
                     </div>
                     <div class="pup_text" style="margin-top:5px;">
@@ -130,17 +130,17 @@
                         <span class="pup_normal_text_small">
                             1.家長擔心學生使用電腦、手機無法專心學習。<br />
                             2.可能影響實體產品銷售，使業務人員不滿。<br />
-                            3.建置網站的硬體、流量、技術，收支平衡難以預估。
+                            3.建置網站的硬體、流量、技術，收支難以預估。
                         </span>
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:30px;">
-                        掌握情況條件，提出<span class="emphasize_text">「最小可行性」方案，製作「影音解答題本的活動網站」</span>
+                        掌握情況提出<span class="emphasize_text">「最小可行性」方案，製作「影音解答題本的活動網站」</span>
                     </div>
                     <div class="pup_content_pic">
                         <img src="images/study_pic_4.jpg" alt="產品示意圖" style="width:100%;max-width:800px;">
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:15px;">
-                        目的：<br /><span class="emphasize_text">藉此低成本的獲得更多確切資訊</span>，使推估的優、劣勢情境更加清晰，<br />驗證產品模式是否可行，減少產品進入市場的營運風險。
+                        目的：<br /><span class="emphasize_text">低成本獲得更多確切資訊</span>，使推估的優、劣勢情境更加清晰，<br />驗證產品模式是否可行，減少進入市場的營運風險。
                     </div>
                 </div>
             </div>
@@ -164,15 +164,15 @@
                     <div class="pup_text pup_normal_text_small" style="margin-top:10px;padding-left:15px;">
                         <span class="emphasize_text pup_normal_text_small">學生段考前1~2禮拜，是尋求學習幫助的熱點。</span><br />
                         <img src="images/study_pic_5.jpg" alt="產品示意圖" style="width:100%;max-width:400px;"><br />
-                        <span class="emphasize_text">以考前猜題名師詳解影音為誘因，</span><br />於學校門口發送DM(附有網站QRcode)作為宣傳，吸引學生免費註冊。<br />
+                        <span class="emphasize_text">以考前猜題、名師影音為誘因，</span><br />於學校門口發送DM(附網站QRcode)作宣傳，吸引學生註冊。<br />
                         <img src="images/study_pic_7.jpg" alt="產品示意圖" style="width:100%;max-width:800px;">
                     </div>
                     <div class="pup_text large_text bold_text emphasize_text" style="margin-top:15px;">
                         3.評估成本
                     </div>
                     <div class="pup_text" style="padding-left:15px;">
-                        以公司現有影音和題本為內容，並以第三方平台做影音串流，<br />
-                        除<span class="emphasize_text">人力製作成本、DM印刷費用1~2萬元</span>沒有其他額外開銷。
+                        以公司現有影音和題本為內容，第三方平台做影音串流，<br />
+                        除<span class="emphasize_text">人力製作成本、DM印刷1~2萬元</span>沒有其他額外開銷。
                     </div>
                     <div class="pup_text large_text bold_text emphasize_text" style="margin-top:15px;">
                         4.評估價值
