--- a/sino_works_3.html
+++ b/sino_works_3.html
@@ -266,13 +266,29 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">功能機制(部分)</div>
-                        <div class="pup_normal_text">以線框稿的功能機制為基礎，於設計稿補充操作細節。</div>
+                        <div class="pup_normal_text">以線框稿的功能機制為基礎，於設計稿交代各操作狀態、操作細節。</div>
                         <div class="pup_normal_text">以Index首頁示意(桌機版)。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
-                                <div class="pup_content_pic_item_content">
-                                    <span style="text-align:center;"> Index1_1.2首頁&nbsp;理想狀態</span>
+                                <div class="pup_content_pic_item_content" style="margin-bottom:80px;">
+                                    <span>Index1_1.1首頁&nbsp;初始狀態</span>
                                     <img src="images/sino_pic_11_6.png" class="sino_pic_10">
+                                </div>
+                                <div class="pup_content_pic_item_content" style="margin-bottom:80px;">
+                                    <span>Index1_1.2首頁&nbsp;理想狀態</span>
+                                    <img src="images/sino_pic_11_6-2.png" class="sino_pic_10">
+                                </div>
+                                <div class="pup_content_pic_item_content" style="margin-bottom:80px;">
+                                    <span>Index1_1.3首頁&nbsp;錯誤狀態</span>
+                                    <img src="images/sino_pic_11_6-3.png" class="sino_pic_10">
+                                </div>
+                                <div class="pup_content_pic_item_content" style="margin-bottom:80px;">
+                                    <span>Index1_1.4首頁&nbsp;空白狀態</span>
+                                    <img src="images/sino_pic_11_6-4.png" class="sino_pic_10">
+                                </div>
+                                <div class="pup_content_pic_item_content" style="margin-bottom:80px;">
+                                    <span>網站錯誤狀態</span>
+                                    <img src="images/sino_pic_11_6-5.png" class="sino_pic_10">
                                 </div>
                             </div>
                         </div>
